@@ -10,6 +10,8 @@ def build(bld):
         'wifi-phy-state-helper.cc',
         'error-rate-model.cc',
         'yans-error-rate-model.cc',
+        'nist-error-rate-model.cc',
+        'dsss-error-rate-model.cc',
         'interference-helper.cc',
         'interference-helper-tx-duration-test.cc',
         'yans-wifi-phy.cc',
@@ -94,6 +96,8 @@ def build(bld):
         'supported-rates.h',
         'error-rate-model.h',
         'yans-error-rate-model.h',
+        'nist-error-rate-model.h',
+        'dsss-error-rate-model.h',
         'dca-txop.h',
         'wifi-mac-header.h',
         'qadhoc-wifi-mac.h',
